Correctly increment crashed renderer process stability counts on OOM.

Change the code to use a switch statement to detect changes to enum in future. Add tests.

BUG=636541
TEST=components_unittests

Review-Url: https://codereview.chromium.org/2233303002
Cr-Commit-Position: refs/heads/master@{#411519}

Former-commit-id: 1633bec645f94fa0681eeccf7704491b336489a8